# nrf54l15

./: CMakeLists.txt  prj.conf
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
boards/arm/ems_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  ems_nrf52840-pinctrl.dtsi  ems_nrf52840.dts  ems_nrf52840.yaml  ems_nrf52840_defconfig
src/: app_io.c  ble.c  ble.h  ems_pwm.c  main.c  main.h
